--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'UK Voting App'
-VOTE1VALUE = 'Tories'
-VOTE2VALUE = 'Labour'
+TITLE = 'US Voting App'
+VOTE1VALUE = 'Democrats'
+VOTE2VALUE = 'Republic'
 SHOWHOST = 'false'
